# lerpable

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
lerpable/: Cargo.toml
lerpable/src/: lib.rs
lerpable_derive/: Cargo.toml
lerpable_derive/src/: derive_lerpable.rs  lib.rs  parser.rs
lerpable_examples/: Cargo.toml
lerpable_examples/src/: main.rs
