[package]
name = "lerpable"
version = "0.0.1"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/lerpable.git"
description = "a derive macro for combining ADTs"
license = "MIT"

[dependencies]
lerpable_derive =  { version = "0.0.1", path = "../lerpable_derive/"}