[package]
name = "lerpable_examples"
version = "0.0.2"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/lerpable.git"
description = "a derive macro for combining ADTs"
license = "MIT"

[dependencies]
lerpable = { version = "0.0.2", path = "../lerpable/" }
